# HEMS-Arena

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
benchmark_configs/: README.md  benchmark_1_sac_sequential.yaml  benchmark_1_tql_sequential.yaml  dqn_parallel_0.yaml  dqn_roundrobin_0.yaml  dqn_sequential_0.yaml  example_DQN_sequential.yaml  example_both.yaml  example_dqn_sequential.yaml  example_multi_parallel.yaml  example_parallel.yaml  example_sequential.yaml  example_simple_sequential.yaml  example_simple_sequential0.yaml  example_simple_sequential_old.yaml  mp_ppo_roundrobin_0.yaml  mp_ppo_sequential_0.yaml  prototype.yaml  sac_sequential_0.yaml  scenario_s1.yaml
datasets/: README.md
datasets/demo_1/: README.md  metadata.json
datasets/demo_1/csv/: demo_ev_1_1_1.csv  demo_ev_1_2_1.csv  demo_ev_1_3_1.csv  demo_house_elec_1_1.csv  demo_house_elec_1_2.csv  demo_house_elec_1_3.csv  demo_price_1.csv  demo_pv_generation_1_3.csv
hems/: main.py
hems/agents/: __init__.py  agent.py  factory.py  legacy_adapter.py
hems/algorithms/: Memdqn.py  __init__.py  base.py  baseline.py  dqn.py  mp_ppo.py  registry.py  rule_based.py  sac.py  tabular_ql.py
hems/algorithms/ambitious_engineers_algorithm/: __init__.py  ambitious_engineers.py  battery_simulator.py  cmaes_optimizer.py  create_demand_model.py  create_solar_model.py  create_training_multi_agents.py  create_training_single_agents.py  data_loader.py  dynamic_programming.py  forecasting.py  initialize.py  phase1_policy.py  phase23_policy.py  policy_optimization.py  run_complete_training.py
hems/algorithms/mpc_forecast/: __init__.py  cufe_forecasters.py  mpc_forecast.py  mpcfluid.py
hems/analysis/: eda.py
hems/core/: __init__.py  adapters.py  benchmark_runner.py  config.py  run_testing_only.py  runner.py  simple_logger.py  training_modes.py  validation_testing.py  yaml_loader.py
hems/environments/: __init__.py  base.py  factory.py
hems/rewards/: Chen_Bu_p2p_variant.py  __init__.py  base.py  custom_rewards.py  mp_ppo_reward.py  no_reward.py  registry.py
hems/scenarios/: __init__.py  __main__.py  base.py  config.py  registry.py  runner.py
hems/scenarios/catalog/: __init__.py  (+4 more)
hems/strategies/: __init__.py  base.py  registry.py  single_agent.py
hems/utils/: dataset.py  seed_manager.py  utils.py
hems/visualization/: plots.py  research_visualizer_0.py
hems/wrappers/: __init__.py  custom_sb3_wrapper.py
models_pretrain/: pretrain_mp_ppo.py
scripts/: final_battery_diagnostic.py  plot_non_shiftable_loads.py  validate_pipeline.py  verify_citylearn.py
synthetic_data/: DATA_README.md  main.py  requirements_data.txt
synthetic_data/data_gen/: config.py  ev.py  load.py  orchestrator.py  persist.py  pv.py  time_index.py  validate.py  weather.py
synthetic_data/metricsviz/: analyze.py  evaluator.py  plots.py
tests/: conftest.py  cufe_test.py  history_length_validation.py  test_battery_costum.py  test_benchmark_pipeline.py  test_citylearn_dqn.py  test_citylearn_rl.py  test_citylearn_wrapper.py  test_cufe_mpc.py  test_env_final.py  test_mp_ppo.py  test_mp_ppo1.py  test_mpc_forcast.py  test_mpppo_reward.py
(+39 files in other folders)
